# JUCE-Plugin-Biolerplate-by-Archie

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
modules/JUCE/extras/: CMakeLists.txt
